# seedweb_api

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
app/: __init__.py
app/endpoints/profiles/: __init__.py  model.py  resource.py
app/endpoints/projects/: __init__.py  model.py  resource.py
migrations/versions/: 32e3b88229f0_.py
